--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h2 id="Coffee_shop_equipment">МАГАЗИН ОБЛАДНАННЯ ДЛЯ КАВИ</h2>
       <h2 id="Contacts">КОНТАКТИ</h2>
       
-    <img src="CoffeeHistory.jpg" alt="Історія кави"></img>
-    <img src="Facts.jpg" alt="Цікаві факти про каву"></img>
-    <img src="Present.jpg" alt="Подарунки кавоману"></img>
-    <img src="Countries.jpg" alt="Країни виробники кави"></img>
-    <img src="Advantage.jpg" alt="Користь кави"></img>
+    <img src="CoffeeHistory.jpg" alt="Історія кави">
+    <img src="Facts.jpg" alt="Цікаві факти про каву">
+    <img src="Present.jpg" alt="Подарунки кавоману">
+    <img src="Countries.jpg" alt="Країни виробники кави">
+    <img src="Advantage.jpg" alt="Користь кави">
     
 </body>
 </html>
