--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
       <h2 id="Сoffee_shop">МАГАЗИН КАВИ</h2>
       <h2 id="Coffee_shop_equipment">МАГАЗИН ОБЛАДНАННЯ ДЛЯ КАВИ</h2>
       <h2 id="Contacts">КОНТАКТИ</h2>
-      
-    <img src="CoffeeHistory.jpg" alt="Історія кави">
-    <img src="Facts.jpg" alt="Цікаві факти про каву">
-    <img src="Present.jpg" alt="Подарунки кавоману">
-    <img src="Countries.jpg" alt="Країни виробники кави">
-    <img src="Advantage.jpg" alt="Користь кави">
-    
+    <img src="Coffeehistory.png" alt="Історія кави"></img>
+    <img src="Facts.png" alt="Цікаві факти про каву"></img>
+    <img src="Presents.png" alt="Подарунки кавоману"></img>
+    <img src="Countries.png" alt="Країни виробники кави"></img>
+    <img src="Advantage.png" alt="Користь кави"></img>
 </body>
 </html>
