--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       <h2 id="Сoffee_shop">МАГАЗИН КАВИ</h2>
       <h2 id="Coffee_shop_equipment">МАГАЗИН ОБЛАДНАННЯ ДЛЯ КАВИ</h2>
       <h2 id="Contacts">КОНТАКТИ</h2>
-    <img src="Coffeehistory.png" alt="Історія кави"></img>
-    <img src="Facts.png" alt="Цікаві факти про каву"></img>
-    <img src="Presents.png" alt="Подарунки кавоману"></img>
-    <img src="Countries.png" alt="Країни виробники кави"></img>
-    <img src="Advantage.png" alt="Користь кави"></img>
+      
+    <img src="Images/Coffeehistory.png" alt="Історія кави"></img>
+    <img src="Images/Facts.png" alt="Цікаві факти про каву"></img>
+    <img src="Images/Presents.png" alt="Подарунки кавоману"></img>
+    <img src="Images/Countries.png" alt="Країни виробники кави"></img>
+    <img src="Images/Advantage.png" alt="Користь кави"></img>
 </body>
 </html>
