--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h2 id="Coffee_shop_equipment">МАГАЗИН ОБЛАДНАННЯ ДЛЯ КАВИ</h2>
       <h2 id="Contacts">КОНТАКТИ</h2>
       
-    <img src="Images/Coffeehistory.png" alt="Історія кави"></img>
-    <img src="Images/Facts.png" alt="Цікаві факти про каву"></img>
-    <img src="Images/Presents.png" alt="Подарунки кавоману"></img>
-    <img src="Images/Countries.png" alt="Країни виробники кави"></img>
-    <img src="Images/Advantage.png" alt="Користь кави"></img>
+    <img src="Images/Coffeehistory.png" alt="Історія кави">
+    <img src="Images/Facts.png" alt="Цікаві факти про каву">
+    <img src="Images/Presents.png" alt="Подарунки кавоману">
+    <img src="Images/Countries.png" alt="Країни виробники кави">
+    <img src="Images/Advantage.png" alt="Користь кави">
 </body>
 </html>
